maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:4: error: not found: value cpt
    while(cpt!=0 && isDirectionFree(Direction.NORTH)){
          ^